# EconometricVolatilityST

./: .gitignore  LICENSE  README.md  pyproject.toml
data/research/: sp500_log_returns.csv  sp500_prices.csv
notebooks/: EDA.ipynb  og_garch.ipynb  og_reg.ipynb  synth_garch.ipynb
notebooks/research/: 00_overview.ipynb  01_baseline_garch.ipynb  01_postanovka_i_metod.ipynb  02_rezultaty_i_vyvody.ipynb  02_synthetic_generation.ipynb  03_tstr_evaluation.ipynb  04_augmentation.ipynb  05_results_summary.ipynb  README.md  run_all.py
notebooks/research/artifacts/: forecasts_B1.csv  forecasts_B2_ctgan.csv  forecasts_B2_timegan.csv  forecasts_B3.csv  forecasts_aug.csv  forecasts_synth_ctgan.csv  forecasts_synth_timegan.csv  garch_params_aug.json  garch_params_real.json  garch_params_synth_ctgan.json  garch_params_synth_timegan.json  metrics_B1.json  metrics_summary.csv  split_info.json  stylized_facts.csv  synth_ctgan.csv  synth_timegan.csv  timegan_history.json  timegan_model.pt
notebooks/research/src/: ctgan_wrapper.py  data.py  garch_eval.py  plots.py  stylized.py  timegan.py
