[project]
name = "econometricvolatilityst"
version = "0.1.0"
description = ""
authors = [
    {name = "As17-01",email = "aseliverstov@nes.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pandas (>=2.1.1,<3)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "arch (>=8.0.0,<9.0.0)",
    "sdv (>=1.36.0,<2.0.0)",
    "ctgan (>=0.12.1,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
